# telecom-customer-churn-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
.streamlit/: config.toml
data/processed/: Telco_Customer_Churn.xlsx
src/apps/: KNeighborsClassifier.pkl  SVC.pkl  dashboard.py  dataviz.csv
src/models/: telco_clean.csv
src/streamlit/: LogisticRegression.pkl  dashboard.py  x_test.csv
tests/: RandomForestClassifier.pkl  XGBClassifier.pkl  app0.py  scaler.pkl  y_test.csv
